[gd_scene load_steps=6 format=3 uid="uid://bmrkj16m4vl6i"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_0w8ph"]
[ext_resource type="Script" path="res://Scripts/ui/dialogue_box.gd" id="2_15rvp"]
[ext_resource type="Script" path="res://Scripts/ui/choice_panel.gd" id="3_h8b3w"]
[ext_resource type="Script" path="res://Scripts/ui/effect_layer.gd" id="4_dqr7b"]

[sub_resource type="Environment" id="Environment_1p5qt"]
background_mode = 1
background_color = Color(0.2, 0.2, 0.3, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_0w8ph")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DialogueBox" type="Control" parent="UI/GameInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_15rvp")

[node name="ChoicePanel" type="Control" parent="UI/GameInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3_h8b3w")

[node name="EffectLayer" type="Control" parent="UI/GameInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_dqr7b")

[node name="DebugInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DebugPanel" type="Panel" parent="UI/DebugInterface"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugInterface/DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "=== デバッグメニュー ==="

[node name="HSeparator" type="HSeparator" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="TestDialogueButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "ダイアログテスト"

[node name="TestChoicesButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "選択肢テスト"

[node name="TestBattleButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "バトルテスト"

[node name="TestEffectsButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "エフェクトテスト"

[node name="HSeparator2" type="HSeparator" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="RelationshipLabel" type="Label" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "関係値: 50 (普通)"

[node name="ModifyRelationshipContainer" type="HBoxContainer" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="IncreaseButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer/ModifyRelationshipContainer"]
layout_mode = 2
text = "+25"

[node name="DecreaseButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer/ModifyRelationshipContainer"]
layout_mode = 2
text = "-25"

[node name="HSeparator3" type="HSeparator" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "セーブ"

[node name="LoadButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "ロード"

[node name="HSeparator4" type="HSeparator" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "設定"

[node name="ReturnToTitleButton" type="Button" parent="UI/DebugInterface/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "タイトルに戻る"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1p5qt")
